Session chairs, capitalization

--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
         friendly stage for students for their first appearance in this
         community.</p>
     <div class="row">
-        <div class="col-md-8" id="program">
+        <div class="col-md-9" id="program">
             <h2>Program</h2>
             <h4>09:00-09:05: Opening Words</h4>
 
-            <h4>09:05-10:25: Morning Session (Oral Presentations)</h4>
+            <h4>09:05-10:25: Morning Session (Session Chair: Michael Elhadad)</h4>
             <ul>
                 <li><b>Compositional Semantic Parsing of Instructions in Unseen Domains</b><br>Ofer Givoli and Roi
                     Reichart
                 </li>
-                <li><b>Neural semantic parsing over multiple knowledge-bases</b><br>Jonathan Herzig and Jonathan Berant
+                <li><b>Neural Semantic Parsing over Multiple Knowledge-bases</b><br>Jonathan Herzig and Jonathan Berant
                 </li>
                 <li><b>A Consolidated Open Knowledge Representation for Multiple Texts</b><br>Rachel Wities, Vered
                     Shwartz, Gabriel Stanovsky, Meni Adler, Ori Shapira, Shyam Upadhyay, Dan Roth, Eugenio Martinez
@@ -107,11 +107,10 @@
             </ul>
             <h4>10:25-11:00: Coffee Break</h4>
             <h4>11:00-12:00: <a href="#" onclick="$('#invited_talk_abstract').slideToggle(); return false;">
-                Invited Talk by Inbal Arnon</a></h4>
+                Invited Talk by Inbal Arnon
+            </a>(Session Chair: Omri Abend)</h4>
+            <h5 style="margin-left: 40px;">More Than Words: Psycholinguistic and Computational Investigations of the Building Blocks of Language</h5>
             <div id="invited_talk_abstract" class="abstract" style="display:none;">
-                <h5>Title:</h5>
-                More than words: psycholinguistic and computational investigations of
-                the building blocks of language
                 <h5>Abstract:</h5>
                 Why are children better language learners than adults despite being
                 worse at a range of other cognitive tasks? Here, I explore the role of
@@ -132,8 +131,7 @@
                 adult language learning. I discuss implications for computational
                 models of language learning and NLP more generally.
                 <h5>Short bio:</h5>
-                <a href="http://arnonlanguagelab.huji.ac.il/index.php/en/people/inbal-arnon">Dr. Inbal Arnon</a>
-                is an associate professor in the Psychology Department at Hebrew University of Jerusalem.
+                Inbal Arnon is an associate professor in the Psychology Department at Hebrew University of Jerusalem.
                 Her main interests are first language
                 acquisition, learning theory, psycholinguistics, and the differences between first and second language
                 learning. She has a BA in linguistics from Tel-Aviv university (Summa cum Laude), an MSc in
@@ -143,11 +141,12 @@
                 changes as a function of prior knowledge and experience.
             </div>
             <h4>12:00-14:00: Poster Session and Light Lunch (See <a href="#posters">list of posters</a>)</h4>
-            <h4>14:00-14:40: An Open Discussion on the future of the <a
-                    href="http://www.mila.cs.technion.ac.il/heb/index.html">Mila Center</a></h4>
-            <h4>14:40-16:00: Afternoon Session (Oral Presentations)</h4>
+            <h4>14:00-14:40: An Open Discussion on the Future of the
+                <a href="http://www.mila.cs.technion.ac.il/heb/index.html">Mila Center</a>:
+                Alon Itai (chair), Shuly Wintner</h4>
+            <h4>14:40-16:00: Afternoon Session (Session Chair: Yoav Goldberg)</h4>
             <ul>
-                <li><b>Too many corrections: Semantic reference-less evaluation for Grammatical Error Correction</b><br>Leshem
+                <li><b>Too Many Corrections: Semantic Reference-less Evaluation for Grammatical Error Correction</b><br>Leshem
                     Choshen and Omri Abend
                 </li>
                 <li><b>Integrating Deep Linguistic Features in Factuality Prediction over Unified Datasets</b><br>Gabriel
@@ -161,7 +160,7 @@
                 </li>
             </ul>
             <h4>16:00-16:30: Coffee Break</h4>
-            <h4>16:30-17:30: Evening Session</h4>
+            <h4>16:30-17:30: Evening Session (Session Chair: Jonathan Berant)</h4>
             <ul>
                 <li><b>Controlling Linguistic Style Aspects in Neural Language Generation</b><br>Jessica Ficler and Yoav
                     Goldberg
@@ -183,7 +182,7 @@
                 <li><b>Interactive Abstractive Summarization for Event News Tweets</b><br>Ori Shapira, Hadar Ronen,
                     Adler Meni, Yael Amsterdamer, Judit Bar-Ilan and Ido Dagan
                 </li>
-                <li><b>Semantic helper for text compose</b><br>Boris Pevzner</li>
+                <li><b>Semantic Helper for Text Compose</b><br>Boris Pevzner</li>
                 <li><b>Acquiring Predicate Paraphrases from News Tweets</b><br>Vered Shwartz, Gabriel Stanovsky and Ido
                     Dagan
                 </li>
@@ -215,10 +214,10 @@
                 <li><b>Multi-Label Classification on Patient Notes</b><br>Tal Baumel, Jumana Nassour-Kassis, Noemie
                     Elhadad and Michael Elhadad
                 </li>
-                <li><b>Crafting a lexicon of referential expressions for NLG applications</b><br>Ariel Gutman,
+                <li><b>Crafting a Lexicon of Referential Expressions for NLG Applications</b><br>Ariel Gutman,
                     Alexandros Andre Chaaraoui and Pascal Fleury
                 </li>
-                <li><b>Where’s my head? Task definition, dataset and initial results for fused head recovery</b><br>Yanai
+                <li><b>Where's My Head? Task Definition, Dataset and Initial Results for Fused Head Recovery</b><br>Yanai
                     Elazar and Yoav Goldberg
                 </li>
                 <li><b>Contextualization and Regularization of Word Embeddings for Machine Comprehension</b><br>Shimi
@@ -230,18 +229,17 @@
                 <li><b>Detection of Native Language Based on Micro Messages</b><br>Oren Tsur, Yohay Nahari and Maayan
                     Matook
                 </li>
-                <li><b>Causal factors of language change under control - the case of frequency bias in laws of semantic
-                    change</b><br>Haim Dubossarsky, Eitan Grossman and Daphna Weinshall
+                <li><b>Causal Factors of Language Change Under Control - the Case of Frequency Bias in Laws of Semantic
+                    Change</b><br>Haim Dubossarsky, Eitan Grossman and Daphna Weinshall
                 </li>
-                <li><b>Rare word embeddings with Sub-word similarity based search: better representations without more
-                    knowledge, data, or training</b><br>Clayton Greenberg, Mittul Singh, Youssef Oualil, and Dietrich
+                <li><b>Rare Word Embeddings with Sub-word Similarity Based Search: Better Representations without More
+                    Knowledge, Data, or Training</b><br>Clayton Greenberg, Mittul Singh, Youssef Oualil, and Dietrich
                     Klakow
                 </li>
             </ol>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="row">
-                <div class="col-md-12">
                     <h2>Time and Location</h2>
                     <p>Monday, September 25, 2017</p>
                     <p>The Brindell and Milton Gottlieb Auditorium (<b>A300</b>),<br>
@@ -250,27 +248,20 @@
                         Edmond J. Safra Campus, Jerusalem</p>
                     <p>The poster session will be held in floor 1 of the same building.</p>
                     <p><a class="btn btn-default" href="img/map.jpg">Campus map &raquo;</a></p>
-                </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
                     <h2>Program Committee</h2>
                     Omri Abend, HUJI<br>
                     Jonathan Berant, TAU
-                </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
                     <h2>Organization Committee</h2>
                     Omri Abend, HUJI<br>
                     Daniel Hershcovich, HUJI<br>
                     Elior Sulem, HUJI<br>
                     Leshem Choshen, HUJI
-                </div>
             </div>
-            <div class="row">
-                <div class="col-md-12" style="height:50px"></div>
-            </div>
+            <div class="row" style="height:50px"></div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-10">
