--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 Science and uses a variety of experimental methods to explore how language is learned and how learning
                 changes as a function of prior knowledge and experience.
             </div>
-            <h4>12:00-14:00: Poster Session and Light Lunch (See <a href="#posters">list of posters</a>)</h4>
+            <h4>12:00-14:00: Poster Session and Light Lunch (see <a href="#posters">list of posters</a>)</h4>
             <h4>14:00-14:40: An Open Discussion on the Future of the
                 <a href="http://www.mila.cs.technion.ac.il/heb/index.html">Mila Center</a>:
                 Alon Itai (chair), Shuly Wintner</h4>
@@ -283,6 +283,7 @@
                     <img src="img/elsc_logo.png" class="img-responsive">
                 </div>
             </div>
+            <div class="row" style="height:50px"></div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-10">
