--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-10">
                     <br><br><br>
-                    We also acknolwedge the support of the Edmond and Lily Safra Center for Brain Sciences.
+                    We also acknowledge the support of the Edmond and Lily Safra Center for Brain Sciences.
                     <img src="img/elsc_logo.png" class="img-responsive">
                 </div>
             </div>
