--- a/index.html
+++ b/index.html
@@ -240,14 +240,21 @@
         </div>
         <div class="col-md-3">
             <div class="row">
-                    <h2>Time and Location</h2>
-                    <p>Monday, September 25, 2017</p>
-                    <p>The Brindell and Milton Gottlieb Auditorium (<b>A300</b>),<br>
-                        The <b>Rothberg</b> Family buildings,<br>
-                        Rachel and Selim Benin School of Computer Science and Engineering,<br>
-                        Edmond J. Safra Campus, Jerusalem</p>
-                    <p>The poster session will be held in floor 1 of the same building.</p>
-                    <p><a class="btn btn-default" href="img/map.jpg">Campus map &raquo;</a></p>
+                <h2>Time and Location</h2>
+                <p>Monday, September 25, 2017</p>
+                <p>The Brindell and Milton Gottlieb Auditorium (<b>A300</b>),<br>
+                    The <b>Rothberg</b> Family buildings,<br>
+                    Rachel and Selim Benin School of Computer Science and Engineering,<br>
+                    Edmond J. Safra Campus, Jerusalem</p>
+                <p>Waze: <b>
+                    <a href="waze://?ll=31.77625,35.19798&navigate=yes" dir="rtl">
+                        בנין רוטברג להנדסה ומדעי המחשב A
+                    </a>
+                </b></p>
+                <p>To enter the campus with a car, please show <a href="iscol2017_invitation.pdf">this invitation</a>.
+                </p>
+                <p>The poster session will be held in floor 1 of the same building.</p>
+                <p><a class="btn btn-default" href="img/map.jpg">Campus map &raquo;</a></p>
             </div>
             <div class="row">
                     <h2>Program Committee</h2>
