Navbar links to posters and location

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
                 <li><a href="#program">Program</a></li>
+                <li><a href="#time_and_location">Time and Location</a></li>
+                <li><a href="#posters">List of Posters</a></li>
             </ul>
         </div>
     </div>
@@ -239,7 +241,7 @@
             </ol>
         </div>
         <div class="col-md-3">
-            <div class="row">
+            <div class="row" id="time_and_location">
                 <h2>Time and Location</h2>
                 <p>Monday, September 25, 2017</p>
                 <p>The Brindell and Milton Gottlieb Auditorium (<b>A300</b>),<br>
