Fix order of poster #23

--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@
                 <li><b>Semantically Motivated Hebrew Verb-Noun Multi-Word Expressions Identification</b><br>Chaya
                     Liebeskind and Yaakov Hacohen-Kerner
                 </li>
-                <li><b>Detection of Native Language Based on Micro Messages</b><br>Oren Tsur, Yohay Nahari and Maayan
-                    Matook
+                <li><b>Detection of Native Language Based on Micro Messages</b><br>Yohay Nahari, Maayan Matook and Oren Tsur
                 </li>
                 <li><b>Causal Factors of Language Change Under Control - the Case of Frequency Bias in Laws of Semantic
                     Change</b><br>Haim Dubossarsky, Eitan Grossman and Daphna Weinshall
