--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
                 Monday, September 25, in the Computer Science Department of the Hebrew
                 University of Jerusalem, the Edmond J. Safra Campus in Givat Ram.</p>
             <p>Participation is free, but registration is required.</p>
-            <p><a class="btn btn-primary btn-lg"
-                  href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link">
-                Registration form &raquo;</a></p>
+            <p>Registration is now closed.</p>
         </div>
     </div>
 </div>
@@ -254,7 +252,6 @@
                 </b></p>
                 <p>To enter the campus with a car, please show <a href="iscol2017_invitation.pdf">this invitation</a>.
                 </p>
-                <p>The poster session will be held in floor 1 of the same building.</p>
                 <p><a class="btn btn-default" href="img/map.jpg">Campus map &raquo;</a></p>
             </div>
             <div class="row">
