Waze icon and invitation

--- a/index.html
+++ b/index.html
@@ -71,8 +71,14 @@
             <p>The Annual Meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
                 Monday, September 25, in the Computer Science Department of the Hebrew
                 University of Jerusalem, the Edmond J. Safra Campus in Givat Ram.</p>
-            <p>Participation is free, but registration is required.</p>
-            <p>Registration is now closed.</p>
+            <p>To enter the campus with a car, please show <a href="iscol2017_invitation.pdf">this invitation</a>.
+            </p><p>Parking is available in and around the building:
+            <a href="waze://?ll=31.77625,35.19798&navigate=yes" dir="rtl">
+                <img src="img/waze.png" style="width: 24px; height: auto;">
+                בנין רוטברג להנדסה ומדעי המחשב A
+            </a>
+        </p>
+            <p>Participation is free, but registration is required. Registration is now closed.</p>
         </div>
     </div>
 </div>
