Poster session location

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
                     The <b>Rothberg</b> Family buildings,<br>
                     Rachel and Selim Benin School of Computer Science and Engineering,<br>
                     Edmond J. Safra Campus, Jerusalem</p>
+                <p>The poster session will be held in floor 1 of the C building.</p>
                 <p>Waze: <b>
                     <a href="waze://?ll=31.77625,35.19798&navigate=yes" dir="rtl">
                         בנין רוטברג להנדסה ומדעי המחשב A
