--- a/index.html
+++ b/index.html
@@ -68,17 +68,10 @@
             </div>
         </div>
         <div class="row">
-            <p>The Annual Meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
+            <p>The Annual Meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, was held on
                 Monday, September 25, in the Computer Science Department of the Hebrew
                 University of Jerusalem, the Edmond J. Safra Campus in Givat Ram.</p>
-            <p>To enter the campus with a car, please show <a href="iscol2017_invitation.pdf">this invitation</a>.
-            </p><p>Parking is available in and around the building:
-            <a href="waze://?ll=31.77625,35.19798&navigate=yes" dir="rtl">
-                <img src="img/waze.png" style="width: 24px; height: auto;">
-                בנין רוטברג להנדסה ומדעי המחשב A
-            </a>
-        </p>
-            <p>Participation is free, but registration is required. Registration is now closed.</p>
+            <p>Thank you for attending!</p>
         </div>
     </div>
 </div>
@@ -251,14 +244,6 @@
                     The <b>Rothberg</b> Family buildings,<br>
                     Rachel and Selim Benin School of Computer Science and Engineering,<br>
                     Edmond J. Safra Campus, Jerusalem</p>
-                <p>The poster session will be held in floor 1 of the C building.</p>
-                <p>Waze: <b>
-                    <a href="waze://?ll=31.77625,35.19798&navigate=yes" dir="rtl">
-                        בנין רוטברג להנדסה ומדעי המחשב A
-                    </a>
-                </b></p>
-                <p>To enter the campus with a car, please show <a href="iscol2017_invitation.pdf">this invitation</a>.
-                </p>
                 <p><a class="btn btn-default" href="img/map.jpg">Campus map &raquo;</a></p>
             </div>
             <div class="row">
@@ -305,7 +290,7 @@
                         <br>
                         <del>Notification: August 25</del>
                         <br>
-                        <b>ISCOL: September 25</b></p>
+                        <del><b>ISCOL: September 25</b></del></p>
                 </div>
             </div>
             <div class="row">
